# omnigent

./: openapi.json  pyproject.toml
integrations/slack/: README.md  pyproject.toml
integrations/slack/src/omnigent_slack/: app.py  auth_manager.py  oauth.py  omnigent.py  service.py  setup.py  tokens.py
integrations/slack/tests/: test_auth_manager.py  test_client_auth.py  test_config.py  test_dispatcher.py  test_oauth.py  test_omnigent.py  test_service.py  test_setup.py  test_tokens.py
omnigent/: claude_native.py  claude_native_bridge.py  cli.py  cursor_native_forwarder.py  databricks_model_discovery.py  goose_native_forwarder.py  hermes_native_forwarder.py  pi_native_credentials.py  qwen_native_forwarder.py
omnigent/db/: db_models.py
omnigent/entities/: conversation.py  scheduled_task.py
omnigent/host/: connect.py  frames.py  local_server.py
omnigent/inner/: antigravity_native_executor.py  claude_native_executor.py  claude_sdk_executor.py  codex_harness.py  codex_native_executor.py  cursor_native_executor.py  goose_native_executor.py  hermes_native_executor.py  kimi_native_executor.py  kiro_native_executor.py  native_attachments.py  pi_native_executor.py  qwen_native_executor.py
omnigent/onboarding/: harness_readiness.py  ucode_state.py
omnigent/runner/: app.py  tool_dispatch.py
omnigent/runtime/: filesystem_registry.py
tests/: known_failures.yaml  test_claude_native.py  test_claude_native_bridge.py  test_codex_native.py  test_databricks_model_discovery.py  test_pi_native_credentials.py  test_qwen_native_forwarder.py  test_telemetry.py
(+114 files in other folders)
