[project]
name = "omnigent-slack"
version = "0.1.0"
description = "Slack Socket Mode bot that drives Omnigent sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiohttp>=3.12.0",
    "cryptography>=42.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "slack-bolt>=1.29.0",
    "slack-sdk>=3.43.0",
]

[project.scripts]
omnigent-slack = "omnigent_slack.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".uv-cache", ".venv", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "slack_bolt.*",
    "slack_sdk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
